# QtNativeWindow

./: CMakeLists.txt  LICENSE  LayeredWindow.hpp  Main.cpp  QtNativeWindow.bat  QtNativeWindow.sln  README.md  TransparentWindow.hpp
AtlMiniHost/: .gitignore  AtlMiniHost.idl  AtlMiniHost.rc  AtlMiniHost.vcxproj  AtlMiniHost.vcxproj.filters  CMainWindow.h  LayeredWindow.hpp  Main.cpp  PluginHostBasic.hpp  README.md  Resource.h  TransparentWindow.hpp  UNREGISTER_AtlMiniHost.bat  packages.config
AtlNativeHost/: AtlNativeHost.vcxproj  AtlNativeHost.vcxproj.filters  Main.cpp
AtlNativeWindow/: AtlNativeWindow.vcxproj  AtlNativeWindow.vcxproj.filters  Main.cpp  README.md
AtlOleHost/: .gitignore  AtlOleHost.idl  AtlOleHost.vcxproj  AtlOleHost.vcxproj.filters  CCustomAxHostWindow.h  CMainWindow.cpp  CMainWindow.h  Main.cpp  PluginHostBasic.hpp  README.md  Resource.h  UNREGISTER_AtlMiniHost.bat  app.manifest
MfcOleControl/: .gitignore  CMakeLists.txt  Main.cpp  MfcAppCtrl.cpp  MfcAppCtrl.h  MfcOleControl.idl  MfcOleControl.rc  MfcOleControl.vcxproj  MyOleControl.idl  Resource.h
MyOleControl/: CMakeLists.txt  Main.cpp  MfcAppCtrl.cpp  MfcAppCtrl.h  MyOleControl.idl  MyOleControl.rc  Resource.h  UNREGISTER_MyOleControl.bat
OleControl/: CMakeLists.txt  Main.cpp
QtNativeWindow/: CMakeLists.txt  Ellipse.hpp  LayeredWindow.hpp  Main.cpp  QtNativeWindow.vcxproj  QtNativeWindow.vcxproj.filters  TransparentWindow.hpp
